--- a/html/home.html
+++ b/html/home.html
@@ -30,20 +30,23 @@
 
                     <div id="menu" class="hidden md:block absolute md:relative top-16 md:top-0 left-0 right-0 bg-gray-900 md:bg-transparent">
                         <div class="flex flex-col md:flex-row md:items-center gap-4 p-4 md:p-0">
-                            <a href="#contact" class="text-purple-300 hover:text-purple-100 transition-colors duration-300">Contact</a>
-                            <a href="#history" class="text-purple-300 hover:text-purple-100 transition-colors duration-300">History</a>
+                            <a href="#" class="hover:text-purple-400 transition-colors">Contact</a>
+                            <a href="#" class="hover:text-purple-400 transition-colors">History</a>
+                            <!-- <a href="#contact" class="text-purple-300 hover:text-purple-100 transition-colors duration-300">Contact</a> -->
+                            <!-- <a href="#history" class="text-purple-300 hover:text-purple-100 transition-colors duration-300">History</a> -->
                             
                             <div class="md:ml-4 flex flex-col md:flex-row gap-4">
-                                
-                                <div class="flex flex-col md:flex-row items-center gap-4">
-                                    <span class="text-purple-400 font-medium">Welcome, <span class="font-bold">User</span></span>
-                                    <a href="/logout" class="px-4 py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 transition-colors duration-300">Logout</a>
-                                </div>
-
-                                <div class="hidden flex-col md:flex-row gap-4">
-                                    <a href="/login" class="px-4 py-2 border border-purple-400 text-purple-400 rounded-md hover:bg-purple-400 hover:text-black transition-colors duration-300">Login</a>
-                                    <a href="/register" class="px-4 py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 transition-colors duration-300 text-center">Register</a>
-                                </div>
+                                {% if current_user.is_authenticated %}
+                                    <div class="flex flex-col md:flex-row items-center gap-4">
+                                        <span class="text-purple-400 font-medium">Welcome, <span class="font-bold">{{ current_user.username }}</span></span>
+                                        <a href="/auth/logout" class="px-4 py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 transition-colors duration-300">Logout</a>
+                                    </div>
+                                {% else %}
+                                    <div class="flex flex-col md:flex-row gap-4">
+                                        <a href="/auth/login" class="px-4 py-2 border border-purple-400 text-purple-400 rounded-md hover:bg-purple-400 hover:text-white transition-colors duration-300">Login</a>
+                                        <a href="/auth/register" class="px-4 py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 transition-colors duration-300 text-center">Register</a>
+                                    </div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
@@ -137,9 +140,15 @@
                         <a href="#" class="text-2xl transition-transform duration-300 hover:scale-110">
                             <img class="w-8 h-8" src="{{ url_for('static', filename='images/instagram.png') }}" alt="">
                         </a>
-                        <a href="#" class="text-2xl transition-transform duration-300 hover:scale-110">🐦</a>
-                        <a href="#" class="text-2xl transition-transform duration-300 hover:scale-110">📸</a>
-                        <a href="#" class="text-2xl transition-transform duration-300 hover:scale-110">🔗</a>
+                        <a href="#" class="text-2xl transition-transform duration-300 hover:scale-110">
+                            <img class="w-8 h-8" src="{{ url_for('static', filename='images/youtube.png') }}" alt="">
+                        </a>
+                        <a href="#" class="text-2xl transition-transform duration-300 hover:scale-110">
+                            <img class="w-8 h-8" src="{{ url_for('static', filename='images/linkedin.png') }}" alt="">
+                        </a>
+                        <a href="#" class="text-2xl transition-transform duration-300 hover:scale-110">
+                            <img class="w-8 h-8" src="{{ url_for('static', filename='images/instagram.png') }}" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
