--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DocVision - Login</title>
+    <title>ScanVision</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body class="min-h-screen bg-gradient-to-br from-gray-900 via-purple-950 to-gray-900 flex items-center justify-center p-4">
@@ -11,7 +11,7 @@
         <div class="bg-gray-900/60 shadow-xl rounded-2xl backdrop-blur-sm p-8 space-y-8 animate-fadeIn">
             <div class="text-center space-y-2">
                 <h1 class="text-3xl font-bold text-white">
-                    <span class="text-docvision">Doc</span>Vision
+                    <span class="text-docvision">Scan</span>Vision
                 </h1>
                 <p class="text-gray-400 text-sm">Sign in to your account</p>
             </div>
