--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DocVision - Register</title>
+    <title>ScanVision</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 </head>
@@ -12,7 +12,7 @@
         <div class="bg-gray-900/60 shadow-xl rounded-2xl backdrop-blur-sm p-8 space-y-8 animate-fadeIn" id="container">
             <div class="text-center space-y-2">
                 <h1 class="text-3xl font-bold text-white">
-                    <span class="text-docvision">Doc</span>Vision
+                    <span class="text-docvision">Scan</span>Vision
                 </h1>
                 <p class="text-gray-400 text-sm">Create your account</p>
             </div>
